--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -26,12 +26,18 @@ section#login > dic#formulario{
         width: 950px;
     }
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#logn > div#formulario{
-        float: right;
+        float: left;
         width: 100%;
+    }
+    div#formulario > h1{
+        font-size: 2em;
+    }
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
