--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@media screen and (min-width:768px) and (max-width:992px){
+@media screen and (min-width:768px) and (max-width:991px){
     body{
         background-image:linear-gradient(to top,#49a09d, #5f2c82);
     }
@@ -12,7 +12,7 @@ section#login > div#imagem{
     width: 30%;
     height: 100%;
 }
-section#login > dic#formulario{
+section#login > div#formulario{
     float: right;
     width: 65%;
 }
@@ -25,19 +25,14 @@ section#login > dic#formulario{
     section#login{
         width: 950px;
     }
-    section#login > div#imagem{
+    section#login>div#imagem{
+      float: left;
+      width: 50%;
+      height: 100%;
+    }
+    section#login>div#formulario{
         float: right;
         width: 50%;
-        height: 100%;
-    }
-    section#logn > div#formulario{
-        float: left;
-        width: 100%;
-    }
-    div#formulario > h1{
-        font-size: 2em;
-    }
-    div#formulario > p {
-        font-size: 1.2em;
+        
     }
 }
