--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -6,6 +6,7 @@
     }
     section#login{
         width: 90vw;
+        height: 280px;
 }
 section#login > div#imagem{
     float: left;
@@ -24,15 +25,23 @@ section#login > div#formulario{
     }
     section#login{
         width: 950px;
+        height: 350px;
     }
     section#login>div#imagem{
-      float: left;
+      float: right;
       width: 50%;
       height: 100%;
     }
     section#login>div#formulario{
-        float: right;
+        float: left;
         width: 50%;
         
+    }
+    div#formulario>h1{
+        font-size: 2em;
+    }
+    div#formulario>p{
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
