--- a/estilos/style.css
+++ b/estilos/style.css
@@ -59,14 +59,35 @@ div#formulario > p {
 }
 form>div.campo{
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 div.campo >label{
     display: none;
+}
+div.campo>i{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input{
+    background-color: #49a09d;
+    font-size: 1em;
+    float: right;
+    width: calc(100% - 40px);
+    height: 100%;
+    transform: translatey(-0px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+}
+div.campo > input:focus-within{
+    background-color: white;
 }
 form > input[type=submit]{
     display: block;
